--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,23 +7,15 @@
     android:orientation="vertical"
     android:gravity="center"
     tools:context=".MainActivity">
-
-    <TextView
-        android:id="@+id/TextData"
-        android:textSize="25sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         />
+
     <Button
         android:id="@+id/btnGet"
         android:text="Get Request"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        />
-    <Button
-        android:id="@+id/btnPost"
-        android:text="Post Request"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         />
