third commit RecycleView + photo from Picasso

--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_margin="8dp">
 
     <com.google.android.material.imageview.ShapeableImageView
@@ -12,27 +12,50 @@
         android:layout_height="120dp"
         android:adjustViewBounds="true"
         android:scaleType="centerCrop"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:shapeAppearanceOverlay="@style/RoundCorner"
-        
         />
+
 <TextView
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:id="@+id/tvHeading"
     android:textColor="@color/black"
-    android:textSize="16dp"
+    android:textSize="20dp"
     android:textStyle="bold"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toEndOf="@+id/title_image"
     app:layout_constraintTop_toTopOf="parent"
     android:layout_marginStart="16dp"
-    android:layout_marginEnd="32dp"
-    android:text="Тестовый текст просто чтобы понять чё да как ту происходит оч длинно и всё такое"
+    android:text="Название ноутбука может быть длинным хз стоит ли делать большой шрифт"
     />
+
+    <TextView
+        android:id="@+id/price"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:text="40000 Рублей"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toRightOf="@id/title_image"
+        app:layout_constraintBottom_toTopOf="@id/view"
+        android:layout_margin="20dp"
+        />
+
+    <Button
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:id="@+id/purchaseButton"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/view"
+        android:layout_margin="10dp"
+        android:text="buy"
+        />
 <View
     android:layout_width="match_parent"
+    android:id="@+id/view"
     android:layout_height="1dp"
     android:layout_margin="8dp"
     app:layout_constraintStart_toStartOf="parent"
