--- a/app/src/main/res/layout/activity_shopping_cart.xml
+++ b/app/src/main/res/layout/activity_shopping_cart.xml
@@ -1,23 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
-    tools:context=".presentation.main.MainActivity">
-    <include layout="@layout/toolbar"/>
+    tools:context=".presentation.favouritesLaptops.ShoppingCartActivity">
+
+    <include
+        android:id="@+id/toolBar"
+        layout="@layout/toolbar" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycleView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
         android:layout_below="@+id/toolBar"
         android:layout_gravity="center"
-         />
-
-
+        />
 </RelativeLayout>
